--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kunal Gaikwad</title>
+    <title>Kunal Gaikwad's Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -22,28 +22,46 @@
 </head>
 <body class="bg-gray-100 flex flex-col min-h-screen">
     <header class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white text-center p-10">
-        <h1 class="text-4xl font-bold fade-in">Hi there! 👋 I'm Kunal Gaikwad</h1>
-        <p class="mt-2 text-lg">Welcome to my personal website</p>
+        <h1 class="text-4xl font-bold fade-in">Kunal Gaikwad's Blog</h1>
+        <p class="mt-2 text-lg">Sharing insights and experiences</p>
     </header>
-    <main class="flex-grow flex items-center justify-center">
-        <div class="fade-in">
-            <img src="https://github-readme-stats.vercel.app/api/top-langs?username=kunalg932&show_icons=true&locale=en&layout=compact" alt="Top Languages" class="rounded shadow-lg">
+    <main class="flex-grow flex">
+        <div class="w-3/4 p-6">
+            <article class="bg-white shadow-md rounded-lg p-6 mb-6 fade-in">
+                <h2 class="text-2xl font-semibold">Blog Post Title</h2>
+                <p class="text-gray-600 mt-2">Posted on <span class="font-medium">Date</span> by <span class="font-medium">Author</span></p>
+                <p class="mt-4">This is a summary of the blog post. Here you can give an overview of what the blog is about. This section can be brief and to the point.</p>
+                <a href="#" class="inline-block mt-4 text-indigo-600 hover:text-indigo-400">Read more...</a>
+            </article>
+            <article class="bg-white shadow-md rounded-lg p-6 mb-6 fade-in">
+                <h2 class="text-2xl font-semibold">Another Blog Post Title</h2>
+                <p class="text-gray-600 mt-2">Posted on <span class="font-medium">Date</span> by <span class="font-medium">Author</span></p>
+                <p class="mt-4">This is a summary of another blog post. You can provide insights or quotes here that will encourage readers to dive deeper.</p>
+                <a href="#" class="inline-block mt-4 text-indigo-600 hover:text-indigo-400">Read more...</a>
+            </article>
+            <!-- Add more blog articles here -->
         </div>
+        <aside class="w-1/4 p-6">
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-lg font-semibold">Categories</h3>
+                <ul class="mt-2">
+                    <li><a href="#" class="text-indigo-600 hover:text-indigo-400">Category 1</a></li>
+                    <li><a href="#" class="text-indigo-600 hover:text-indigo-400">Category 2</a></li>
+                    <li><a href="#" class="text-indigo-600 hover:text-indigo-400">Category 3</a></li>
+                </ul>
+            </div>
+            <div class="bg-white shadow-md rounded-lg p-4 mt-6">
+                <h3 class="text-lg font-semibold">Tags</h3>
+                <ul class="mt-2">
+                    <li><a href="#" class="text-indigo-600 hover:text-indigo-400">Tag 1</a></li>
+                    <li><a href="#" class="text-indigo-600 hover:text-indigo-400">Tag 2</a></li>
+                    <li><a href="#" class="text-indigo-600 hover:text-indigo-400">Tag 3</a></li>
+                </ul>
+            </div>
+        </aside>
     </main>
     <footer class="bg-gray-800 text-white text-center p-6">
-        <p>Connect with me:</p>
-        <div class="flex justify-center mt-2">
-            <a href="https://github.com/kunalg932" target="_blank" class="mx-4 hover:text-indigo-500 transition duration-300">
-                <i class="fab fa-github fa-2x"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/your-profile" target="_blank" class="mx-4 hover:text-indigo-500 transition duration-300">
-                <i class="fab fa-linkedin fa-2x"></i>
-            </a>
-            <a href="https://twitter.com/your-profile" target="_blank" class="mx-4 hover:text-indigo-500 transition duration-300">
-                <i class="fab fa-twitter fa-2x"></i>
-            </a>
-        </div>
-        <p class="mt-4">&copy; 2024 Kunal Gaikwad</p>
+        <p>&copy; 2024 Kunal Gaikwad. All rights reserved.</p>
     </footer>
 </body>
 </html>
