--- a/index.html
+++ b/index.html
@@ -39,10 +39,25 @@
         <h1 class="text-4xl font-bold fade-in">Hi there! 👋 I'm Kunal Gaikwad</h1>
         <p class="mt-2 text-lg">Welcome to my personal website</p>
     </header>
-    <main class="flex-grow flex items-center justify-center">
+    <main class="flex-grow flex flex-col items-center justify-center">
         <div class="fade-in">
-            <img src="https://github-readme-stats.vercel.app/api/top-langs?username=kunalg932&show_icons=true&locale=en&layout=compact" alt="Top Languages" class="rounded shadow-lg">
+            <img src="https://github-readme-stats.vercel.app/api/top-langs?username=kunalg932&show_icons=true&locale=en&layout=compact" alt="Top Languages" class="rounded shadow-lg mb-10">
         </div>
+        <form id="contact-form" class="bg-white p-6 rounded shadow-md">
+            <div class="mb-4">
+                <label for="telegram" class="block text-sm font-medium text-gray-700">Telegram Username</label>
+                <input type="text" id="telegram" name="telegram" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
+            </div>
+            <div class="mb-4">
+                <label for="gmail" class="block text-sm font-medium text-gray-700">Gmail</label>
+                <input type="email" id="gmail" name="gmail" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
+            </div>
+            <div class="mb-4">
+                <label for="message" class="block text-sm font-medium text-gray-700">Message (Optional)</label>
+                <textarea id="message" name="message" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring-indigo-500"></textarea>
+            </div>
+            <button type="submit" class="w-full bg-indigo-600 text-white p-2 rounded hover:bg-indigo-700 transition duration-300">Send Message</button>
+        </form>
     </main>
     <footer class="bg-gray-800 text-white text-center p-6">
         <p class="text-lg">Connect with me:</p>
@@ -65,5 +80,40 @@
         </div>
         <p class="mt-4">&copy; 2024 Kunal Gaikwad</p>
     </footer>
+
+    <script>
+        document.getElementById('contact-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const telegram = event.target.telegram.value;
+            const gmail = event.target.gmail.value;
+            const message = event.target.message.value;
+
+            const token = '7518797268:AAEf-icRlT5LEbfB1Y0QxPqUArQIGAKrG-I';
+            const chatId = '7155416931';
+            const text = `New message from ${telegram}\nGmail: ${gmail}\nMessage: ${message}`;
+
+            fetch(`https://api.telegram.org/bot${token}/sendMessage`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                    chat_id: chatId,
+                    text: text,
+                }),
+            })
+            .then(response => {
+                if (response.ok) {
+                    alert('Message sent successfully!');
+                    event.target.reset();
+                } else {
+                    alert('Failed to send message.');
+                }
+            })
+            .catch(error => {
+                alert('Error: ' + error.message);
+            });
+        });
+    </script>
 </body>
 </html>
